--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <h1>Sketchnote Club</h1>
-    <p>Coming soon!</p>
+    <p>We might sketchnote at your conference!</p>
+    <p>Get in touch:</p>
+    <a href="mailto:sketchnoteclub@gmail.com">sketchnoteclub@gmail.com</a>
+
+    <div id="coming-soon" class="">
+      <strong>Coming soon:</strong>
+      <p>What is Sketchnoting?</p>
+      <p>Who are we?</p>
+      <p>What do we offer?</p>
+      <p>What's the price?</p>
+    </div>
   </body>
 </html>
