--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Sketchnote Club</h1>
-    <p>We might sketchnote at your conference!</p>
+    <p>We may sketchnote at your conference!</p>
     <p>Get in touch:</p>
     <a href="mailto:sketchnoteclub@gmail.com">sketchnoteclub@gmail.com</a>
 
