--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
+    <img src="sketchnoteclub-logo.png" alt="Sketchnote Club Logo showing a pen between a less-than and greater-then sign.">
     <h1>Sketchnote Club</h1>
     <p>We may sketchnote at your conference!</p>
     <p>Get in touch:</p>
     <a href="mailto:sketchnoteclub@gmail.com">sketchnoteclub@gmail.com</a>
 
-    <div id="coming-soon" class="">
+    <h3>Follow us:</h3>
+    <p><a href="https://twitter.com/sketchnoteclub">Twitter</a></p>
+    <p><a href="https://www.instagram.com/sketchnoteclub/">Instagram</a></p>
+
+    <div id="coming-soon">
       <strong>Coming soon:</strong>
       <p>What is Sketchnoting?</p>
       <p>Who are we?</p>
