--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sketchnote Club</title>
+    <title>The Sketchnote Club</title>
     <link rel="stylesheet" href="stylesheet.css">
+
+    <meta name="description" content="The Sketchnote Club is a collective of developers who take visual notes at conferences and publish them online." />
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="summary">
+    <meta name="twitter:site" content="@sketchnoteclub">
+    <meta name="twitter:description" content="The Sketchnote Club is a collective of developers who take visual notes at conferences and publish them online.">
+    <meta name="twitter:creator" content="@sketchnoteclub">
+    <meta name="twitter:image" content="https://sketchnoteclub.github.io/sketchnoteclub-logo.png">
+    <!-- Open Graph data -->
+    <meta property="og:title" content="The Sketchnote Club" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://sketchnoteclub.github.io/" />
+    <meta property="og:image" content="https://sketchnoteclub.github.io/sketchnoteclub-logo.png" />
+    <meta property="og:description" content="The Sketchnote Club is a collective of developers who take visual notes at conferences and publish them online." />
   </head>
   <body>
     <img src="sketchnoteclub-logo.png" alt="Sketchnote Club Logo showing a pen between a less-than and greater-then sign.">
