collaborator reponsive view

--- a/index.html
+++ b/index.html
@@ -39,28 +39,40 @@
 
         <div class="items contributor-bios">
           <div class="item">
-            <a href="https://twitter.com/daiyitastic">
-              <img src="https://pbs.twimg.com/profile_images/965908401799684096/KEiN8dMO.jpg">
-            </a>
-            <h4>daiyi</h4>
-            <div class="location">oakland.ca.usa</div>
-            <p>likes mountains, sunshine, and alpine lakes \o/ clojure <3 js <3 everything is interesting, community is a trust fall.</p>
+            <div class="photo">
+              <a href="https://twitter.com/daiyitastic">
+                <img src="https://pbs.twimg.com/profile_images/965908401799684096/KEiN8dMO.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>daiyi</h4>
+              <div class="location">oakland.ca.usa</div>
+              <p>likes mountains, sunshine, and alpine lakes \o/ clojure <3 js <3 everything is interesting, community is a trust fall.</p>
+            </div>
           </div>
           <div class="item">
-            <a href="https://twitter.com/malweene">
-              <img src="https://pbs.twimg.com/profile_images/875847418289565697/s_LZRu6Y.jpg">
-            </a>
-            <h4>malweene</h4>
-            <div class="location">berlin.de</div>
-            <p>likes coding & comics, vr, js&ruby</p>
+            <div class="photo">
+              <a href="https://twitter.com/malweene">
+                <img src="https://pbs.twimg.com/profile_images/875847418289565697/s_LZRu6Y.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>malweene</h4>
+              <div class="location">berlin.de</div>
+              <p>likes coding & comics, vr, js&ruby</p>
+            </div>
           </div>
           <div class="item">
-            <a href="https://twitter.com/filtercake">
-              <img src="https://pbs.twimg.com/profile_images/717093313824833536/7Uhb_JsA.jpg">
-            </a>
-            <h4>fabian</h4>
-            <div class="location">hamburg.de</div>
-            <p>design, development and community</p>
+            <div class="photo">
+              <a href="https://twitter.com/filtercake">
+                <img src="https://pbs.twimg.com/profile_images/717093313824833536/7Uhb_JsA.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>fabian</h4>
+              <div class="location">hamburg.de</div>
+              <p>design, development and community</p>
+            </div>
           </div>
         </div>
       </div>
