--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="profile">
               <h4>daiyi</h4>
-              <div class="location">oakland.ca.usa</div>
+              <div class="location">oakland | ca | usa</div>
               <p>likes mountains, sunshine, and alpine lakes \o/ clojure <3 js <3 everything is interesting, community is a trust fall.</p>
             </div>
           </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="profile">
               <h4>malweene</h4>
-              <div class="location">berlin.de</div>
+              <div class="location">berlin | de</div>
               <p>likes coding & comics, vr, js&ruby</p>
             </div>
           </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="profile">
               <h4>fabian</h4>
-              <div class="location">hamburg.de</div>
+              <div class="location">hamburg | de</div>
               <p>design, development and community</p>
             </div>
           </div>
