add special note to german government

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 
       <div class="container subtext">
         <p>----</p>
+        <strong>Special note to the german government</strong>
+        <p>we are a community of independent freelancers, not a company \o/</p>
+      </div>
+      <div class="container subtext">
+        <p>----</p>
         <strong>Coming soon</strong>
         <p>What is Sketchnoting?</p>
         <p>What do we offer?</p>
