text updates based on review feedback

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
       <div class="container contributors">
-        <h3>collaborative instigators</h3>
+        <h3>collaborators</h3>
 
         <div class="items contributor-bios">
           <div class="item">
@@ -101,8 +101,7 @@
 
       <div class="container subtext">
         <p>----</p>
-        <strong>Special note to the german government</strong>
-        <p>we are a community of independent freelancers, not a company \o/</p>
+        <p>All members of the Sketchnote Club are independent creatives. All business matters will be discussed between you and the individual.</p>
       </div>
       <div class="container subtext">
         <p>----</p>
