--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               </a>
             </div>
             <div class="profile">
-              <h4>malweene</h4>
+              <h4>malwine</h4>
               <div class="location">berlin | de</div>
-              <p>likes coding & comics, vr, js&ruby</p>
+              <p>draws since 1995, sketchnotes since 2015, likes both coding and comics, interested in JavaScript, Ruby, WebXR, frontend and community conferences</p>
             </div>
           </div>
           <div class="item">
