Add static pictures

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="item">
             <div class="photo">
               <a href="https://twitter.com/daiyitastic">
-                <img src="https://pbs.twimg.com/profile_images/965908401799684096/KEiN8dMO.jpg">
+                <img src="static/img/chris.jpg">
               </a>
             </div>
             <div class="profile">
@@ -53,7 +53,7 @@
           <div class="item">
             <div class="photo">
               <a href="https://twitter.com/malweene">
-                <img src="https://pbs.twimg.com/profile_images/875847418289565697/s_LZRu6Y.jpg">
+                <img src="static/img/malwine.jpg">
               </a>
             </div>
             <div class="profile">
@@ -65,7 +65,7 @@
           <div class="item">
             <div class="photo">
               <a href="https://twitter.com/filtercake">
-                <img src="https://pbs.twimg.com/profile_images/717093313824833536/7Uhb_JsA.jpg">
+                <img src="static/img/fabian.jpg">
               </a>
             </div>
             <div class="profile">
