Suggest new bio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             <div class="profile">
               <h4>malwine</h4>
               <div class="location">berlin | de</div>
-              <p>draws since 1995, sketchnotes since 2015, likes both coding and comics, interested in JavaScript, Ruby, WebXR, frontend and community conferences</p>
+              <p><strong>interested in:</strong> JavaScript,
+                Ruby, WebXR, frontend and community conferences,
+                diverse speaker lineups and topics<br>
+                <strong>travel area:</strong> Europe
+              </p>
             </div>
           </div>
           <div class="item">
