--- a/index.html
+++ b/index.html
@@ -46,8 +46,20 @@
             </div>
             <div class="profile">
               <h4>daiyi</h4>
-              <div class="location">oakland | ca | usa</div>
-              <p>likes mountains, sunshine, and alpine lakes \o/ clojure <3 js <3 everything is interesting, community is a trust fall.</p>
+              <div class="location">oakland . ca . usa</div>
+              <p>likes bicycles, smol video games, & climbing \o/ </p>
+              <p>
+                <b>interested in:</b>
+                js & clojure,
+                distsys & observability,
+                cross-disciplinary/research/theoretical cs,
+                community, art+tech
+              </p>
+              <p>
+                <b>travel area:</b> 2.5-hour flight radius from SFO/OAK;
+                pretty done with airplanes though so I prefer local!
+                you could probably convince me to go most places that are near a mountain
+              </p>
             </div>
           </div>
           <div class="item">
@@ -58,11 +70,13 @@
             </div>
             <div class="profile">
               <h4>malwine</h4>
-              <div class="location">berlin | de</div>
-              <p><strong>interested in:</strong> JavaScript,
+              <div class="location">berlin . de</div>
+              <p><b>interested in:</b> JavaScript,
                 Ruby, WebXR, frontend and community conferences,
-                diverse speaker lineups and topics<br>
-                <strong>travel area:</strong> Europe
+                diverse speaker lineups and topics
+              </p>
+              <p>
+                <b>travel area:</b> Europe
               </p>
             </div>
           </div>
@@ -74,8 +88,14 @@
             </div>
             <div class="profile">
               <h4>fabian</h4>
-              <div class="location">hamburg | de</div>
-              <p>design, development and community</p>
+              <div class="location">hamburg . de</div>
+              <p>
+                <b>interested in:</b> design, development and community
+              </p>
+              <p>
+                <b>travel area:</b> -
+              </p>
+              <p>
             </div>
           </div>
         </div>
