Add claire and use mobile fluid design on desktop

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="page">
 
       <div class="container header">
-        <img src="sketchnoteclub-logo.png" alt="Sketchnote Club Logo showing a pen between a less-than and greater-then sign.">
+        <img id="logo" src="sketchnoteclub-logo.png" alt="Sketchnote Club Logo showing a pen between a less-than and greater-then sign.">
         <h1>Sketchnote Club</h1>
         <p>We'll sketchnote your conference!</p>
       </div>
 
       <div class="container">
-        <p>We are a group of folks who get really excited about learning and teaching. Sketchnotes is an awesome way to absorb & digest information and share it with the community.</p>
+        <p id="intro">We are a group of folks who get really excited about learning and teaching. Sketchnotes is an awesome way to absorb & digest information and share it with the community.</p>
       </div>
 
 
@@ -94,6 +94,26 @@
               </p>
               <p>
                 <b>travel area:</b> -
+              </p>
+              <p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/clairikine">
+                <img src="static/img/claire.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>clairikine</h4>
+              <div class="location">berlin . de</div>
+              <p>
+                <b>interested in:</b> Creative practices,
+                (tech &) community events, civic engagement,
+                pretty much everything
+              </p>
+              <p>
+                <b>travel area:</b> Europe/North America
               </p>
               <p>
             </div>
