--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               </a>
             </div>
             <div class="profile">
-              <h4>daiyi</h4>
-              <div class="location">oakland . ca . usa</div>
+              <h4>Daiyi <div class="location">Oakland | CA | USA</div></h4>
+
               <p>likes bicycles, smol video games, & climbing \o/ </p>
               <p>
                 <b>interested in:</b>
@@ -69,8 +69,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>malwine</h4>
-              <div class="location">berlin . de</div>
+              <h4>Malwine <div class="location">Berlin | DE</div></h4>
               <p><b>interested in:</b> JavaScript,
                 Ruby, WebXR, frontend and community conferences,
                 diverse speaker lineups and topics
@@ -87,8 +86,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>fabian</h4>
-              <div class="location">hamburg . de</div>
+              <h4>Fabian <div class="location">Hamburg | DE</div></h4>
               <p>
                 <b>interested in:</b> design, development and community
               </p>
@@ -105,8 +103,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>clairikine</h4>
-              <div class="location">berlin . de</div>
+              <h4>Clairikine <div class="location">Berlin | DE</div></h4>
               <p>
                 <b>interested in:</b> Creative practices,
                 (tech &) community events, civic engagement,
