Use bullet point

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Daiyi <div class="location">Oakland | CA | USA</div></h4>
+              <h4>Daiyi <div class="location">Oakland • CA • USA</div></h4>
 
               <p>likes bicycles, smol video games, & climbing \o/ </p>
               <p>
@@ -69,7 +69,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Malwine <div class="location">Berlin | DE</div></h4>
+              <h4>Malwine <div class="location">Berlin • DE</div></h4>
               <p><b>interested in:</b> JavaScript,
                 Ruby, WebXR, frontend and community conferences,
                 diverse speaker lineups and topics
@@ -86,7 +86,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Fabian <div class="location">Hamburg | DE</div></h4>
+              <h4>Fabian <div class="location">Hamburg • DE</div></h4>
               <p>
                 <b>interested in:</b> design, development and community
               </p>
@@ -103,7 +103,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Clairikine <div class="location">Berlin | DE</div></h4>
+              <h4>Clairikine <div class="location">Berlin • DE</div></h4>
               <p>
                 <b>interested in:</b> Creative practices,
                 (tech &) community events, civic engagement,
