--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
               <p>
             </div>
           </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/iamjoyclark">
+                <img src="static/img/joy.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>joy</h4>
+              <div class="location">aachen . de</div>
+              <p>
+                <b>interested in:</b> security, functional programming,
+                webdev, design, UX, community conferences,
+                graphic recording/moderation of small groups
+                (e.g. at unconferences)
+              </p>
+              <p>
+                <b>travel area:</b> Europe (the closer the better!)
+              </p>
+              <p>
+            </div>
+          </div>
         </div>
       </div>
 
