--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Daiyi <div class="location">Oakland • CA • USA</div></h4>
+              <h4>daiyi <div class="location">Oakland • CA • US</div></h4>
 
               <p>likes bicycles, smol video games, & climbing \o/ </p>
               <p>
@@ -122,8 +122,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>joy</h4>
-              <div class="location">aachen . de</div>
+              <h4>Joy <div class="location">Aachen • DE</div></h4>
               <p>
                 <b>interested in:</b> security, functional programming,
                 webdev, design, UX, community conferences,
