--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>daiyi <div class="location">Oakland • CA • US</div></h4>
+              <h4>daiyi <div class="location">Oakland, CA • US</div></h4>
 
               <p>likes bicycles, smol video games, & climbing \o/ </p>
               <p>
