update Fabian's bio

--- a/index.html
+++ b/index.html
@@ -81,19 +81,20 @@
           </div>
           <div class="item">
             <div class="photo">
-              <a href="https://twitter.com/filtercake">
+              <a href="https://twitter.com/afknapping">
                 <img src="static/img/fabian.jpg">
               </a>
             </div>
             <div class="profile">
-              <h4>Fabian <div class="location">Hamburg • DE</div></h4>
+              <h4>Fabian <div class="location">near Hamburg, Germany</div></h4>
               <p>
-                <b>interested in:</b> design, development and community
+                <b>interested in:</b> Design, development and community
               </p>
               <p>
-                <b>travel area:</b> -
+                <b>travel Area:</b> short term: between Berlin and Düsseldorf – overnight: Europe
               </p>
               <p>
+              </p>
             </div>
           </div>
           <div class="item">
