Align country code

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </a>
             </div>
             <div class="profile">
-              <h4>Fabian <div class="location">near Hamburg, Germany</div></h4>
+              <h4>Fabian <div class="location">near Hamburg • DE</div></h4>
               <p>
                 <b>interested in:</b> Design, development and community
               </p>
