--- a/index.html
+++ b/index.html
@@ -136,6 +136,27 @@
               <p>
             </div>
           </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/chiuki">
+                <img src="static/img/chiuki.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>chiuki <div class="location">near Boulder, CO • US</div></h4>
+              <p>
+                likes board games, aerial dance, all things kawaii
+              </p>
+              <p>
+                <b>interested in:</b> android, community, organizing,
+                meta (e.g. speaking about speaking, sketchnoting about sketchnoting)
+              </p>
+              <p>
+                <b>travel area:</b> North America
+              </p>
+              <p>
+            </div>
+          </div>
         </div>
       </div>
 
