Add stephanie's bio

--- a/index.html
+++ b/index.html
@@ -157,6 +157,28 @@
               <p>
             </div>
           </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/stephaniecodes">
+                <img src="static/img/stephanie.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>Stephanie
+                <div class="location">Berlin • DE</div>
+              </h4>
+              <p>likes art, snowboarding, rainbows, bouldering </p>
+              <p>
+                <b>interested in:</b> javascript, frontend, ux, accessibility, hardware, wearables, LEDs, code+art, code newbies,
+                diversity, inclusion
+              </p>
+              <p>
+                <b>travel Area:</b> worldwide
+              </p>
+              <p>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
