--- a/index.html
+++ b/index.html
@@ -173,7 +173,27 @@
                 diversity, inclusion
               </p>
               <p>
-                <b>travel Area:</b> worldwide
+                <b>travel area:</b> worldwide
+              </p>
+              <p>
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/katjabudnikov">
+                <img src="static/img/katja.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>Katja
+                <div class="location">Hamburg • DE</div>
+              </h4>
+              <p>
+                <b>interested in:</b> online Marketing (SEO, SEA, social media), people topics, tech topics, design/UX, testing
+              </p>
+              <p>
+                <b>travel area:</b> Europe
               </p>
               <p>
               </p>
@@ -181,7 +201,6 @@
           </div>
         </div>
       </div>
-
 
       <div class="container">
       </div>
