--- a/index.html
+++ b/index.html
@@ -272,6 +272,25 @@
               </p>
             </div>
           </div>
+          <div class="item">
+            <div class="photo">
+              <a href="https://twitter.com/1nfoverload">
+                <img src="static/img/daisy.jpg">
+              </a>
+            </div>
+            <div class="profile">
+              <h4>Daisy <div class="location">Berlin • DE</div></h4>
+              <p><b>interested in:</b> people topics, open-source software
+                infrastructure, community conferences, art+tech
+              </p>
+              <p>
+                <b>travel area:</b> worldwide
+              </p>
+              <p>
+                <a class="portfolio" href="https://infoverload.ca/#DevDoodles">Samples</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
